<resources>
    <string name="app_name">RowTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_workout">Last workout:</string>

    <string-array name="menu_options">
        <item>Add new workout</item>
        <item>Previous workouts</item>
        <item>View statistics</item>
        <item>Personal records</item>
    </string-array>
    <string name="title_activity_add_workout">Add Workout</string>
    <string name="add_new">Add New</string>
    <string name="settings">Settings</string>

    <string name="date">Date:</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="notes">Notes:</string>
    <string name="share">Share</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_add">Confirm Add</string>
    <string name="time_rank">Time rank:</string>
    <string name="time_500m">Time/500m:</string>
    <string name="rank">Rank:</string>
</resources>
