<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:columnCount="3"
        android:id="@+id/grid_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_column="0"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/date"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_columnSpan="2"
            android:focusable="false"
            android:cursorVisible="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:layout_column="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"/>

        <EditText
            android:id="@+id/distance"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"

            android:layout_column="1"
            android:layout_columnWeight="2"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:layout_column="2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:layout_column="0"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/distance_rank"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:inputType="time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_column="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"/>

        <EditText
            android:id="@+id/time"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:inputType="time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:layout_column="0"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/time_rank"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:inputType="time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_500m"
            android:layout_column="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"/>

        <EditText
            android:id="@+id/time_500"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:inputType="time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:layout_column="0"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/time_500_rank"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:inputType="time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_column="0"
            android:layout_gravity="top"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"/>

        <EditText
            android:id="@+id/notes"
            android:layout_height="200dp"

            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="top"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="@dimen/view_workout_margin"
            />

    </GridLayout>
</ScrollView>
